# fx-data-platform

./: .dockerignore  .gitignore  Dockerfile.airflow  LICENSE  Makefile  README.md  constraints-airflow.txt  docker-compose.monitoring.yml  docker-compose.yml  prompts-data-platform.md  pyproject.toml  requirements-airflow.txt
.github/: README.md
.github/workflows/: python-ci.yml  spark-tests.yml  terraform-cd.yml  terraform-ci.yml
conf/: spark-defaults.conf
docs/: architecture.md  data_catalog.md  monitoring_guide.md  onboarding.md  runbook.md
etl/common/: quality.py  schemas.py  spark_session.py
etl/iceberg/: catalog_setup.py  maintenance.py  time_travel_examples.py
etl/jobs/bronze/: ingest_transactions.py
etl/jobs/gold/: aggregate_metrics.py
etl/jobs/silver/: transform_transactions.py
infra/terraform/: main.tf  outputs.tf  variables.tf
infra/terraform/environments/dev/: terraform.tfvars
infra/terraform/modules/glue/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/iam/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/s3/: main.tf  outputs.tf  variables.tf
ingestion/consumer/: health_check_consumer.py
ingestion/debezium/: connector-config.json  register-connector.sh
ingestion/producer/: config.py  exchange_rate_producer.py  streaming_producer.py
ingestion/redpanda-connect/: pipeline.yaml
ingestion/schemas/: transaction_event.json  user_event.json
ml/: __init__.py
ml/config/: training_config.yaml
ml/feature_store/: __init__.py
ml/feature_store/feature_repo/: __init__.py  data_sources.py  feature_definitions.py  feature_store.yaml
ml/feature_store/scripts/: __init__.py  materialize_features.py  validate_features.py
ml/notebooks/: exploration.ipynb
ml/serving/: Dockerfile  __init__.py  inference_service.py  model_loader.py  prediction_logger.py
ml/serving/scripts/: __init__.py  load_test.py
ml/training/: __init__.py  evaluate_model.py  promote_model.py  train_anomaly_detector.py
monitoring/alertas/: notification_channels.yaml
monitoring/grafana/dashboards/: cost_tracking.json  pipeline_overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: alert_rules.yml  prometheus.yml
orchestration/dags/: dag_daily_etl.py  dag_ml_pipeline.py  dag_streaming_monitor.py
orchestration/plugins/callbacks/: alerting.py
orchestration/plugins/operators/: spark_iceberg_operator.py
scripts/: init.sql  seed_data.py  seed_initial_data.sql
scripts/ops/: cleanup_orphan_files.py  data_quality_report.py  generate_runbook.py  health_check.py  reprocess_partition.py  rotate_secrets.py
tests/: conftest.py
tests/etl/: test_spark_jobs.py
tests/ingestion/: test_integration_streaming.py  test_producer.py  test_schemas.py
tests/ml/: test_training.py
tests/orchestration/: conftest.py  test_dags.py
